tests/NormalTests/paczka1/fuzzy1/20281139.err
Error in line 2: 6GBvY9 S583 96,1
Error in line 13: 6GBvY9 A16 0,1
Error in line 17: 6GBvY9 S552 47,5
Error in line 9: cUzuF S677 7,5
Error in line 33: Qq3QVTh4l8h S583 177,8
